fixed overflow x

--- a/app/globals.css
+++ b/app/globals.css
@@ -223,6 +223,7 @@ nav > ul {
   border-radius: 4%;
 }
 .mobile-sticky {
+  
   padding: 2rem;
   position: sticky;
   top: 110px;
@@ -230,6 +231,7 @@ nav > ul {
 }
 
 .feature {
+ 
   position: relative;
   display: flex;
 }
@@ -237,7 +239,7 @@ nav > ul {
   width: 60%;
 }
 .feature-visual {
-  width: 40%;
+  width: fit-content;
 }
 /*eof feature paralax */
 
